force-app/main/default/objects/tc9_eau__ATO_Integration_Settings__mdt/tc9_eau__ATO_Integration_Settings__mdt.object-meta.xml
<CustomObject>
    <description>To maintain integration details for STP</description>
    <label>ATO Integration Setting</label>
    <pluralLabel>ATO Integration Settings</pluralLabel>
</CustomObject>