force-app/main/default/objects/tc9_eau__ATO_Integration_Settings__mdt/fields/tc9_eau__Base_URL__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Base_URL__c</fullName>
    <description>Base URL of all the endpoints</description>
    <inlineHelpText>Base URL of all the endpoints</inlineHelpText>
    <label>Base URL</label>
    <type>Url</type>
</CustomField>