force-app/main/default/objects/tc9_eau__ATO_Integration_Settings__mdt/fields/tc9_eau__BMS_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__BMS_Name__c</fullName>
    <description>Name of the BMS Software</description>
    <label>BMS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>