force-app/main/default/objects/tc9_eau__ATO_Integration_Settings__mdt/fields/tc9_eau__BMS_Vendor__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__BMS_Vendor__c</fullName>
    <label>BMS Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>