force-app/main/default/objects/tc9_eau__ATO_Integration_Settings__mdt/fields/tc9_eau__BMS_Version__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__BMS_Version__c</fullName>
    <description>Version of the BMS Software</description>
    <inlineHelpText>Version of the BMS Software</inlineHelpText>
    <label>BMS Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>