force-app/main/default/objects/tc9_eau__ATO_Integration_Settings__mdt/fields/tc9_eau__Client_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Client_Id__c</fullName>
    <description>The static value created and shared by Integration provider as part of the initial set-up, and the same value used by all Clients</description>
    <inlineHelpText>The static value created and shared by Integration provider as part of the initial set-up, and the same value used by all Clients</inlineHelpText>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>