force-app/main/default/objects/tc9_eau__ATO_Integration_Settings__mdt/fields/tc9_eau__Product_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Product_Id__c</fullName>
    <description>Product ID provided to Payroll / Digital Service Provider (DSP) by the ATO as part of one-off DSP registration process. 5 digit Id refers to test environment while 6 digit refers to the production environment</description>
    <inlineHelpText>Product ID provided to Payroll / Digital Service Provider (DSP) by the ATO as part of one-off DSP registration process. 5 digit Id refers to test environment while 6 digit refers to the production environment</inlineHelpText>
    <label>Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>