force-app/main/default/objects/tc9_eau__ATO_Integration_Settings__mdt/fields/tc9_eau__Username__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Username__c</fullName>
    <description>Username provided by the integration service provider</description>
    <inlineHelpText>Username provided by the integration service provider</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>